--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -86,9 +86,10 @@
 <img src="{{ asset('imguser/' ~ img) }}" alt="Erreur">
 <br>
 <span class="text-white font-weight-bold"></span>
-  {{ form_start(formadd) }}
+{{ form_start(formadd, {'attr': {novalidate: 'novalidate'}}) }}
     <label for="image" id="imageLabel" style="cursor: pointer;" class="mt-3">Changer l'image</label>
     {{ form_widget(formadd.image, {'attr': {'style': 'display: none;'}, 'id': 'imageInput'}) }}
+    {{form_errors(formadd.image)}}
     {{ form_widget(formadd.submit, {'attr': {'class': 'btn btn-link', 'style': 'display: none;'}, 'id': 'submitButton'}) }}
 {{ form_end(formadd) }}
 
@@ -117,7 +118,7 @@
 </div>
 </div>
 </div>
-<a href="{{path('app_user')}}" class="btn btn-danger">Se Déconnecter</a>
+<a href="{{path('app_user_logout')}}" class="btn btn-danger" id="logout-link">Se Déconnecter</a>
 </div>
 </div>
 <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
@@ -169,7 +170,7 @@
 </div>
 </div>
 <div class="text-right">
-<button type="button" id="submit" name="submit" class="btn btn-danger">Supprimer Votre Compte</button>
+<a type="button" href="{{ path('app_user_del', {'id': id }) }}" id="submit" name="submit" class="btn btn-danger">Supprimer Votre Compte</a>
 </div>
 </div>
 </div>
